# gazegesturekit

./: MISSION_SATISFACTION.md  README.md  pyproject.toml
examples/: rules.yaml
gazegesturekit/: cli.py
gazegesturekit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gazegesturekit/calibrate/: tps.py  wizard.py
gazegesturekit/demos/: mouse.py
gazegesturekit/eye/: blink.py  camera_model.py  fixation.py  gaze.py  headpose.py  landmarks.py  pupil.py  saccade.py
gazegesturekit/filters/: adaptive_one_euro.py  one_euro.py
gazegesturekit/fuse/: rules.py  state.py
gazegesturekit/gui/: __init__.py  app.py
gazegesturekit/hand/: gestures.py  gestures_extra.py  landmarks.py
gazegesturekit/io/: camera.py
gazegesturekit/runtime/: events.py
tests/: test_gestures.py  test_gestures_extra.py  test_one_euro.py  test_pupil.py  test_rules.py  test_saccade.py  test_tps.py
