[project]
name = "gazegesturekit"
version = "0.1.0"
description = "Gaze + hand gesture fusion SDK for touch-free interactions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name="GazeGestureKit"}]
dependencies = [
  "mediapipe>=0.10.14",
  "opencv-python>=4.9.0",
  "numpy>=1.26",
  "typer[all]>=0.12.4",
  "pydantic>=2.7",
  "websockets>=12.0",
  "pyautogui>=0.9.54",
  "rich>=13.7",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[project.urls]
homepage = "https://example.com/gazegesturekit"

[project.scripts]
ggk = "gazegesturekit.cli:app"

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
